src/App.css
* {
  --green: #92de9f;
  --red: #ff3049;
  --gold: #fec518;
  --forest: rgb(20, 130, 17);
  text-transform: lowercase;
}

.App {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#nav li {
  list-style-type: none;
}

#nav {
  display: flex;
  gap: 20px;
}

.background-cabbage {
  height: 90vh;
  position: fixed;
  bottom: 0;
  left: 0;
  opacity: 20%;
  z-index: -1;
}

html {
  height: 100vh;
  background: radial-gradient(
      circle at 53.75% 57.22%,
      #92de9f,
      transparent 100%
    ),
    radial-gradient(circle at 29.58% 46.06%, rgb(20, 130, 17), transparent 100%),
    radial-gradient(circle at 10.9% 9.78%, #ffffff, transparent 100%),
    radial-gradient(circle at 85% 70.56%, rgb(20, 130, 17), transparent 100%),
    radial-gradient(circle at 80.07% 35.76%, #ffffff, transparent 100%),
    radial-gradient(circle at 50.42% 8.02%, #ffffff, transparent 100%),
    radial-gradient(circle at 48.82% 95.11%, rgb(20, 130, 17), transparent 100%),
    radial-gradient(circle at 8.75% 90.22%, #ffffff, transparent 100%),
    radial-gradient(circle at 50% 50%, #000000, #000000 100%);
  background-attachment: fixed;
}
h1 {
  font-family: "Playfair Display", "Didot", "Georgia", "Times New Roman";
  font-style: italic;
  font-weight: 200;
  font-size: 72px;
  letter-spacing: -5px;
  margin-bottom: 10px;
}

a {
  color: white;
  text-decoration: none;
  font-family: "Helvetica Neue", "Helvetica", "Futura", "sans-serif";
  transition-duration: 0.5s;
}

a:hover,
h1,
.active-nav,
h2 {
  color: #ff3049;
  padding: 0px;
  border-bottom: 2px solid #fad550;
}

h3 {
  color: white;
}

.project-card {
  width: 100%;
  margin: 20px;
}

h1:hover {
  color: white;
}

.main {
  width: 80%;
  margin: 30px;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.list {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.project-gif {
  height: 450px;
}

.left {
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
.right {
  width: 50%;
}

#profile {
  height: 200px;
  margin: 30px;
  width: auto;
  border-radius: 50%;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  transition: all 0.2s ease;
}

#profile:hover {
  -webkit-filter: grayscale(0%);
  filter: grayscale(0%);
}

.project-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.stack {
  color: var(--forest);
  margin-bottom: 5px;
}

.resume {
  text-align: left !important;
  width: 80%;
}

.resume-heading {
  display: flex;
  width: 100%;
  align-items:center;
  justify-content: space-between;
}

